--- a/Consulta de Temperaturas.ipynb
+++ b/Consulta de Temperaturas.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "1. **Carga de un DataFrame** con los datos meteorológicos provistos en un archivo externo.\n",
     "2. Se convierten las **fechas** a **formato correcto** para su manipulación posterior.\n",
-    "3. Crea un programa (una función o un conjunto de funciones) que le pida al usuario que seleccione una **ciudad** de la lista de ciudades disponibles en nuestro DataFrame, y un **mes** del año.\n",
+    "3. Se crea un programa que le pida al usuario que seleccione una **ciudad** de la lista de ciudades disponibles en el DataFrame, y un **mes** del año.\n",
     "4. Muéstrale al usuario un gráfico que muestre las temperaturas mínimas y máximas que se registraron en la ciudad elegida durante el mes elegido.\n",
     "5. El programa debe preguntarle al usuario si desea seguir haciendo consultas o no."
    ]
@@ -228,30 +228,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "c04af330-9b87-444d-89d7-0b39d270b17f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[21], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#2. Se convierten las **fechas** a **formato correcto** para su manipulación posterior.\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFecha\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_datetime\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mFecha\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdayfirst\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merrors\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcoerse\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m df\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\core\\tools\\datetimes.py:1063\u001b[0m, in \u001b[0;36mto_datetime\u001b[1;34m(arg, errors, dayfirst, yearfirst, utc, format, exact, unit, infer_datetime_format, origin, cache)\u001b[0m\n\u001b[0;32m   1061\u001b[0m             result \u001b[38;5;241m=\u001b[39m arg\u001b[38;5;241m.\u001b[39mtz_localize(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mutc\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   1062\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(arg, ABCSeries):\n\u001b[1;32m-> 1063\u001b[0m     cache_array \u001b[38;5;241m=\u001b[39m \u001b[43m_maybe_cache\u001b[49m\u001b[43m(\u001b[49m\u001b[43marg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mformat\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcache\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconvert_listlike\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1064\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m cache_array\u001b[38;5;241m.\u001b[39mempty:\n\u001b[0;32m   1065\u001b[0m         result \u001b[38;5;241m=\u001b[39m arg\u001b[38;5;241m.\u001b[39mmap(cache_array)\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\core\\tools\\datetimes.py:247\u001b[0m, in \u001b[0;36m_maybe_cache\u001b[1;34m(arg, format, cache, convert_listlike)\u001b[0m\n\u001b[0;32m    245\u001b[0m unique_dates \u001b[38;5;241m=\u001b[39m unique(arg)\n\u001b[0;32m    246\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(unique_dates) \u001b[38;5;241m<\u001b[39m \u001b[38;5;28mlen\u001b[39m(arg):\n\u001b[1;32m--> 247\u001b[0m     cache_dates \u001b[38;5;241m=\u001b[39m \u001b[43mconvert_listlike\u001b[49m\u001b[43m(\u001b[49m\u001b[43munique_dates\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mformat\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m    248\u001b[0m     \u001b[38;5;66;03m# GH#45319\u001b[39;00m\n\u001b[0;32m    249\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\core\\tools\\datetimes.py:433\u001b[0m, in \u001b[0;36m_convert_listlike_datetimes\u001b[1;34m(arg, format, name, utc, unit, errors, dayfirst, yearfirst, exact)\u001b[0m\n\u001b[0;32m    431\u001b[0m \u001b[38;5;66;03m# `format` could be inferred, or user didn't ask for mixed-format parsing.\u001b[39;00m\n\u001b[0;32m    432\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mformat\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mformat\u001b[39m \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmixed\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m--> 433\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_array_strptime_with_fallback\u001b[49m\u001b[43m(\u001b[49m\u001b[43marg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mutc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mformat\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexact\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merrors\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    435\u001b[0m result, tz_parsed \u001b[38;5;241m=\u001b[39m objects_to_datetime64(\n\u001b[0;32m    436\u001b[0m     arg,\n\u001b[0;32m    437\u001b[0m     dayfirst\u001b[38;5;241m=\u001b[39mdayfirst,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    441\u001b[0m     allow_object\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m    442\u001b[0m )\n\u001b[0;32m    444\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m tz_parsed \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    445\u001b[0m     \u001b[38;5;66;03m# We can take a shortcut since the datetime64 numpy array\u001b[39;00m\n\u001b[0;32m    446\u001b[0m     \u001b[38;5;66;03m# is in UTC\u001b[39;00m\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\core\\tools\\datetimes.py:467\u001b[0m, in \u001b[0;36m_array_strptime_with_fallback\u001b[1;34m(arg, name, utc, fmt, exact, errors)\u001b[0m\n\u001b[0;32m    456\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_array_strptime_with_fallback\u001b[39m(\n\u001b[0;32m    457\u001b[0m     arg,\n\u001b[0;32m    458\u001b[0m     name,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    462\u001b[0m     errors: \u001b[38;5;28mstr\u001b[39m,\n\u001b[0;32m    463\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Index:\n\u001b[0;32m    464\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    465\u001b[0m \u001b[38;5;124;03m    Call array_strptime, with fallback behavior depending on 'errors'.\u001b[39;00m\n\u001b[0;32m    466\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 467\u001b[0m     result, tz_out \u001b[38;5;241m=\u001b[39m \u001b[43marray_strptime\u001b[49m\u001b[43m(\u001b[49m\u001b[43marg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfmt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexact\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mexact\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merrors\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43merrors\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mutc\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mutc\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    468\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m tz_out \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    469\u001b[0m         unit \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mdatetime_data(result\u001b[38;5;241m.\u001b[39mdtype)[\u001b[38;5;241m0\u001b[39m]\n",
-      "File \u001b[1;32mstrptime.pyx:337\u001b[0m, in \u001b[0;36mpandas._libs.tslibs.strptime.array_strptime\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mAssertionError\u001b[0m: "
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fecha</th>\n",
+       "      <th>Ciudad</th>\n",
+       "      <th>Temperatura Maxima</th>\n",
+       "      <th>Temperatura Minima</th>\n",
+       "      <th>Precipitacion</th>\n",
+       "      <th>Velocidad del Viento</th>\n",
+       "      <th>Humedad Relativa</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>Buenos Aires</td>\n",
+       "      <td>27</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>22.7</td>\n",
+       "      <td>68.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>Cordoba</td>\n",
+       "      <td>35</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>33.8</td>\n",
+       "      <td>61.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>Rosario</td>\n",
+       "      <td>23</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10.6</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>Mendoza</td>\n",
+       "      <td>35</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>23.8</td>\n",
+       "      <td>76.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>Tucuman</td>\n",
+       "      <td>36</td>\n",
+       "      <td>18</td>\n",
+       "      <td>17.2</td>\n",
+       "      <td>25.7</td>\n",
+       "      <td>54.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1820</th>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>Buenos Aires</td>\n",
+       "      <td>15</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>17.9</td>\n",
+       "      <td>49.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1821</th>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>Cordoba</td>\n",
+       "      <td>15</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>17.8</td>\n",
+       "      <td>62.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1822</th>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>Rosario</td>\n",
+       "      <td>14</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>38.2</td>\n",
+       "      <td>31.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1823</th>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>Mendoza</td>\n",
+       "      <td>13</td>\n",
+       "      <td>9</td>\n",
+       "      <td>84.8</td>\n",
+       "      <td>27.6</td>\n",
+       "      <td>35.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1824</th>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>Tucuman</td>\n",
+       "      <td>15</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>49.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1825 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Fecha        Ciudad  Temperatura Maxima  Temperatura Minima  \\\n",
+       "0    2023-01-01  Buenos Aires                  27                  18   \n",
+       "1    2023-01-01       Cordoba                  35                  18   \n",
+       "2    2023-01-01       Rosario                  23                  21   \n",
+       "3    2023-01-01       Mendoza                  35                  21   \n",
+       "4    2023-01-01       Tucuman                  36                  18   \n",
+       "...         ...           ...                 ...                 ...   \n",
+       "1820 2023-12-31  Buenos Aires                  15                  12   \n",
+       "1821 2023-12-31       Cordoba                  15                   7   \n",
+       "1822 2023-12-31       Rosario                  14                   8   \n",
+       "1823 2023-12-31       Mendoza                  13                   9   \n",
+       "1824 2023-12-31       Tucuman                  15                  10   \n",
+       "\n",
+       "      Precipitacion  Velocidad del Viento  Humedad Relativa  \n",
+       "0               0.0                  22.7              68.8  \n",
+       "1               0.0                  33.8              61.7  \n",
+       "2               0.0                  10.6              80.0  \n",
+       "3               0.0                  23.8              76.8  \n",
+       "4              17.2                  25.7              54.9  \n",
+       "...             ...                   ...               ...  \n",
+       "1820            0.0                  17.9              49.2  \n",
+       "1821            0.0                  17.8              62.4  \n",
+       "1822            0.0                  38.2              31.2  \n",
+       "1823           84.8                  27.6              35.3  \n",
+       "1824            0.0                  30.0              49.1  \n",
+       "\n",
+       "[1825 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#2. Se convierten las **fechas** a **formato correcto** para su manipulación posterior.\n",
-    "df['Fecha'] = pd.to_datetime(df['Fecha'], dayfirst=True, errors='coerse')\n",
+    "df['Fecha'] = pd.to_datetime(df['Fecha'], dayfirst=True, errors='coerce')\n",
     "df"
    ]
   },
@@ -259,6 +423,62 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "04a1b019-2342-423d-863d-71212bddc98e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ciudades disponibles: \n",
+      "Buenos Aires\n",
+      "Cordoba\n",
+      "Rosario\n",
+      "Mendoza\n",
+      "Tucuman\n"
+     ]
+    }
+   ],
+   "source": [
+    "#3. Se crea un programa que le pida al usuario que seleccione una **ciudad** de la lista de ciudades disponibles en el DataFrame, y un **mes** del año.\n",
+    "\n",
+    "#Se muestran ciudades disponibles\n",
+    "print(\"Ciudades disponibles: \")\n",
+    "for ciudad in df['Ciudad'].unique():\n",
+    "    print(f'{ciudad}')\n",
+    "    \n",
+    "#Peticion al usuario de la ciudad.\n",
+    "seleccion_ciudad = input('Selecciona una ciudad: ')\n",
+    "\n",
+    "#Validacion de las ciudades\n",
+    "if seleccion_ciudad not in df['Ciudad'].unique():\n",
+    "    print('La ciudad no se encuntra en la base')\n",
+    "else:\n",
+    "    #Peticion al usuario del mes.\n",
+    "    seleccion_mes = input('Selecciona un mes (1 al 12): ')\n",
+    "    try:\n",
+    "        seleccion_mes = int(seleccion_mes)\n",
+    "        if seleccion_mes < 1 or seleccion_mes > 12:\n",
+    "            print('El mes no se encuentra en la base')\n",
+    "        else:\n",
+    "            #Filtrar las selecciones del usuario.\n",
+    "            df_filtrado = df[\n",
+    "                (df['Ciudad'] == seleccion_ciudad) &\n",
+    "                (df['Fecha'].dt.month == seleccion_mes)\n",
+    "            ]\n",
+    "            #Mostrar datos solicitados.\n",
+    "            if df_filtrado.empty:\n",
+    "                print(f'No hay datos disponibles para la ciudad {seleccion_ciudad} en el mes {seleccion_mes}')\n",
+    "            else:\n",
+    "                print(f'Los datos para {seleccion_ciudad} en el mes de {seleccion_mes}')\n",
+    "                print(df_filtrado)\n",
+    "    except:\n",
+    "        print('Ingresar un dato correcto para el mes')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2f50796-c4e3-4feb-94a2-74f6bf0906ac",
    "metadata": {},
    "outputs": [],
    "source": []
